--- a/Project/ui/manual_entry.ui
+++ b/Project/ui/manual_entry.ui
@@ -22,18 +22,18 @@
     <height>16777215</height>
    </size>
   </property>
-  <layout class="QVBoxLayout" name="mainManualEntryLayout">
+  <layout class="QVBoxLayout" name="mainVerticalLayout">
    <property name="spacing">
-    <number>5</number>
+    <number>15</number>
    </property>
    <property name="leftMargin">
-    <number>10</number>
+    <number>15</number>
    </property>
    <property name="topMargin">
     <number>20</number>
    </property>
    <property name="rightMargin">
-    <number>10</number>
+    <number>15</number>
    </property>
    <property name="bottomMargin">
     <number>30</number>
@@ -108,7 +108,7 @@
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
+      <enum>QSizePolicy::Expanding</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -132,16 +132,13 @@
      <property name="bottomMargin">
       <number>0</number>
      </property>
-     <property name="horizontalSpacing">
-      <number>0</number>
-     </property>
-     <property name="verticalSpacing">
+     <property name="spacing">
       <number>15</number>
      </property>
      <item row="2" column="0">
       <widget class="QLabel" name="manualProductCodeFieldLbl">
        <property name="text">
-        <string>Product Code - </string>
+        <string>Product Code :</string>
        </property>
       </widget>
      </item>
@@ -151,7 +148,7 @@
         <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeType">
-        <enum>QSizePolicy::Fixed</enum>
+        <enum>QSizePolicy::Expanding</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -186,7 +183,7 @@
         <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeType">
-        <enum>QSizePolicy::Fixed</enum>
+        <enum>QSizePolicy::Expanding</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -227,7 +224,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Product Name -</string>
+        <string>Product Name :</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -237,7 +234,7 @@
      <item row="7" column="0">
       <widget class="QLabel" name="manualUnitFieldLbl">
        <property name="text">
-        <string>Unit:</string>
+        <string>Unit :</string>
        </property>
       </widget>
      </item>
@@ -256,7 +253,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Quantity:</string>
+        <string>Quantity :</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -462,22 +459,6 @@
       </widget>
      </item>
     </layout>
-   </item>
-   <item>
-    <spacer name="verticalSpacer_5">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>5</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
