--- a/Project/ui/vegetable_entry.ui
+++ b/Project/ui/vegetable_entry.ui
@@ -123,7 +123,7 @@
      <property name="minimumSize">
       <size>
        <width>700</width>
-       <height>300</height>
+       <height>250</height>
       </size>
      </property>
      <property name="editTriggers">
@@ -169,19 +169,60 @@
     </spacer>
    </item>
    <item>
-    <widget class="QLabel" name="vegEFieldLbl">
-     <property name="text">
-      <string>Select Vegetable:</string>
+    <widget class="QFrame" name="vegEntryFrame2">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
      </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
      </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
+     <layout class="QHBoxLayout" name="vegEntryLblLayout" stretch="1,2,1">
+      <property name="spacing">
+       <number>20</number>
+      </property>
+      <property name="leftMargin">
+       <number>5</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>5</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="vegEFieldLbl">
+        <property name="text">
+         <string>Select Vegetable:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="vegEStatusLabel">
+        <property name="text">
+         <string>Place vegetable on the scale ...</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
@@ -221,11 +262,8 @@
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <property name="horizontalSpacing">
-       <number>10</number>
-      </property>
-      <property name="verticalSpacing">
-       <number>5</number>
+      <property name="spacing">
+       <number>20</number>
       </property>
       <item row="7" column="2">
        <widget class="QPushButton" name="btnVegECancel">
@@ -237,63 +275,63 @@
       <item row="0" column="0">
        <widget class="QPushButton" name="vegEButton1">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <widget class="QPushButton" name="vegEButton10">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="1" column="2">
        <widget class="QPushButton" name="vegEButton6">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="QPushButton" name="vegEButton5">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="4" column="2">
        <widget class="QPushButton" name="vegEButton12">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="3" column="2">
        <widget class="QPushButton" name="vegEButton9">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="QPushButton" name="vegEButton4">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="3" column="0">
        <widget class="QPushButton" name="vegEButton7">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QPushButton" name="vegEButton2">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
@@ -307,49 +345,49 @@
       <item row="4" column="1">
        <widget class="QPushButton" name="vegEButton11">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="3" column="1">
        <widget class="QPushButton" name="vegEButton8">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="0" column="2">
        <widget class="QPushButton" name="vegEButton3">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="7" column="0">
        <widget class="QPushButton" name="vegEButton16">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="6" column="0">
        <widget class="QPushButton" name="vegEButton13">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="6" column="2">
        <widget class="QPushButton" name="vegEButton15">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
       <item row="6" column="1">
        <widget class="QPushButton" name="vegEButton14">
         <property name="text">
-         <string>Not Used</string>
+         <string>empty</string>
         </property>
        </widget>
       </item>
@@ -386,32 +424,6 @@
        </spacer>
       </item>
      </layout>
-    </widget>
-   </item>
-   <item>
-    <spacer name="verticalSpacer_3">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
-    <widget class="QLabel" name="vegEStatusLabel">
-     <property name="text">
-      <string>Place vegetable on the scale ...</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
     </widget>
    </item>
    <item>
