Cross-Window Feedback and Visual & UI Polish implemented

--- a/Project/ui/logout_menu.ui
+++ b/Project/ui/logout_menu.ui
@@ -177,6 +177,11 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>btnLogoutCancel</tabstop>
+  <tabstop>btnLogoutOk</tabstop>
+  <tabstop>customCloseBtn</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
